--- a/src/com/company/MainMenu.form
+++ b/src/com/company/MainMenu.form
@@ -2,18 +2,67 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.company.MainMenu">
   <grid id="27dc6" binding="panel3" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
     <constraints>
-      <xy x="20" y="20" width="500" height="220"/>
+      <xy x="20" y="20" width="812" height="121"/>
     </constraints>
     <properties>
       <background color="-525058"/>
     </properties>
     <border type="none"/>
     <children>
-      <component id="18b2" class="javax.swing.JLabel">
+      <component id="18b2" class="javax.swing.JLabel" binding="MensajeBienvenida">
         <constraints/>
         <properties>
           <foreground color="-16777216"/>
           <text value="Bienvenido Usuario"/>
+        </properties>
+      </component>
+      <component id="a1add" class="javax.swing.JLabel">
+        <constraints/>
+        <properties>
+          <background color="-525058"/>
+          <foreground color="-16777216"/>
+          <text value="¿Qué desea realizar el día de hoy?"/>
+        </properties>
+      </component>
+      <component id="dd917" class="javax.swing.JLabel">
+        <constraints/>
+        <properties>
+          <foreground color="-16777216"/>
+          <text value="Busador"/>
+        </properties>
+      </component>
+      <component id="c00e3" class="javax.swing.JTextField" binding="txtBuscar">
+        <constraints/>
+        <properties>
+          <background color="-3289651"/>
+          <columns value="15"/>
+        </properties>
+      </component>
+      <component id="6b72b" class="javax.swing.JButton" binding="btnBuscar">
+        <constraints/>
+        <properties>
+          <background color="-16777216"/>
+          <foreground color="-525058"/>
+          <text value="Buscar"/>
+        </properties>
+      </component>
+      <vspacer id="1642b">
+        <constraints/>
+      </vspacer>
+      <component id="26d96" class="javax.swing.JButton" binding="btnDevolver">
+        <constraints/>
+        <properties>
+          <background color="-16777216"/>
+          <foreground color="-525058"/>
+          <text value="Devolver libro"/>
+        </properties>
+      </component>
+      <component id="2f897" class="javax.swing.JButton" binding="btnSalir">
+        <constraints/>
+        <properties>
+          <background color="-16777216"/>
+          <foreground color="-525058"/>
+          <text value="Salir"/>
         </properties>
       </component>
     </children>
