--- a/src/com/company/MainMenu.form
+++ b/src/com/company/MainMenu.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.company.MainMenu">
   <grid id="27dc6" binding="panel3" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
     <constraints>
-      <xy x="20" y="20" width="797" height="121"/>
+      <xy x="20" y="20" width="1027" height="121"/>
     </constraints>
     <properties>
       <background color="-525058"/>
@@ -43,12 +43,18 @@
         <properties>
           <background color="-16777216"/>
           <foreground color="-525058"/>
-          <text value="Buscar"/>
+          <text value="Buscar disponibilidad"/>
         </properties>
       </component>
       <vspacer id="1642b">
         <constraints/>
       </vspacer>
+      <component id="a5355" class="javax.swing.JButton" binding="solicitarLibroButton" default-binding="true">
+        <constraints/>
+        <properties>
+          <text value="Solicitar libro"/>
+        </properties>
+      </component>
       <component id="26d96" class="javax.swing.JButton" binding="btnDevolver">
         <constraints/>
         <properties>
