--- a/src/com/company/MainMenu.form
+++ b/src/com/company/MainMenu.form
@@ -53,6 +53,7 @@
         <constraints/>
         <properties>
           <background color="-16777216"/>
+          <foreground color="-525058"/>
           <text value="Solicitar libro"/>
         </properties>
       </component>
