--- a/src/com/company/MainMenu.form
+++ b/src/com/company/MainMenu.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.company.MainMenu">
   <grid id="27dc6" binding="panel3" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
     <constraints>
-      <xy x="20" y="20" width="1027" height="121"/>
+      <xy x="20" y="20" width="1123" height="121"/>
     </constraints>
     <properties>
       <background color="-525058"/>
@@ -63,6 +63,14 @@
           <background color="-16777216"/>
           <foreground color="-525058"/>
           <text value="Devolver libro"/>
+        </properties>
+      </component>
+      <component id="dbf96" class="javax.swing.JButton" binding="btnFactura">
+        <constraints/>
+        <properties>
+          <background color="-16777216"/>
+          <foreground color="-525058"/>
+          <text value="Facturar"/>
         </properties>
       </component>
       <component id="2f897" class="javax.swing.JButton" binding="btnSalir">
