--- a/src/com/company/MainMenu.form
+++ b/src/com/company/MainMenu.form
@@ -13,7 +13,18 @@
         <constraints/>
         <properties>
           <foreground color="-16777216"/>
-          <text value="Bienvenido Usuario"/>
+          <opaque value="false"/>
+          <text value="Bienvenido"/>
+          <verifyInputWhenFocusTarget value="true"/>
+          <verticalAlignment value="0"/>
+        </properties>
+      </component>
+      <component id="86b68" class="javax.swing.JLabel" binding="lblMostrar">
+        <constraints/>
+        <properties>
+          <enabled value="true"/>
+          <requestFocusEnabled value="true"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="a1add" class="javax.swing.JLabel">
@@ -22,13 +33,6 @@
           <background color="-525058"/>
           <foreground color="-16777216"/>
           <text value="¿Qué desea realizar el día de hoy?"/>
-        </properties>
-      </component>
-      <component id="dd917" class="javax.swing.JLabel">
-        <constraints/>
-        <properties>
-          <foreground color="-16777216"/>
-          <text value=""/>
         </properties>
       </component>
       <component id="c00e3" class="javax.swing.JTextField" binding="txtBuscar">
